--- a/dist.scss
+++ b/dist.scss
@@ -6,7 +6,7 @@
 // Concise variables
 // -----------
 
-@import "node_modules/concise.css/src/globals";
+@import "node_modules/concise.css/globals";
 
 //
 // Concise utils
