Update heading variable

--- a/utils/_headings.scss
+++ b/utils/_headings.scss
@@ -5,7 +5,7 @@
 .h1, .h2, .h3, .h4, .h5, .h6,
 .giga, .mega, .kilo {
   color: getColor(text, heading);
-  font-family: $font-family-headings;
+  font-family: $font-secondary;
   line-height: 1.25;
 
   .small,
