Fix variable names

--- a/concise-utils.scss
+++ b/concise-utils.scss
@@ -1,18 +1,8 @@
 /**
  * Concise Utils
  * https://github.com/ConciseCSS/concise-utils
- * MIT license - James Kolce, Keenan Payne & Concise CSS Contributors
+ * MIT license - James Kolce
  */
 
 // Concise Utils components
-@import 'utils/blockquote';
-@import 'utils/buttons';
-@import 'utils/colors';
-@import 'utils/conditional-styling';
-@import 'utils/forms';
-@import 'utils/headings';
-@import 'utils/helpers';
-@import 'utils/lists';
-@import 'utils/print';
-@import 'utils/tables';
-@import 'utils/type';
+@import 'utils/margins';
