Prefix classes with underscore

--- a/utils/_borders.scss
+++ b/utils/_borders.scss
@@ -2,28 +2,28 @@
 // Border classes
 // =============================================================================
 
-.b0 { border: 0; }
-.bt0 { border-top: 0; }
-.br0 { border-right: 0; }
-.bb0 { border-bottom: 0; }
-.bl0 { border-left: 0; }
+._b0 { border: 0; }
+._bt0 { border-top: 0; }
+._br0 { border-right: 0; }
+._bb0 { border-bottom: 0; }
+._bl0 { border-left: 0; }
 
-.bt1 { border-top: 1px solid getColor(base, lines); }
-.br1 { border-top: 1px solid getColor(base, lines); }
-.bb1 { border-top: 1px solid getColor(base, lines); }
-.bl1 { border-top: 1px solid getColor(base, lines); }
+._bt1 { border-top: 1px solid getColor(base, lines); }
+._br1 { border-top: 1px solid getColor(base, lines); }
+._bb1 { border-top: 1px solid getColor(base, lines); }
+._bl1 { border-top: 1px solid getColor(base, lines); }
 
-.bt2 { border-top: 2px solid getColor(base, lines); }
-.br2 { border-top: 2px solid getColor(base, lines); }
-.bb2 { border-top: 2px solid getColor(base, lines); }
-.bl2 { border-top: 2px solid getColor(base, lines); }
+._bt2 { border-top: 2px solid getColor(base, lines); }
+._br2 { border-top: 2px solid getColor(base, lines); }
+._bb2 { border-top: 2px solid getColor(base, lines); }
+._bl2 { border-top: 2px solid getColor(base, lines); }
 
-.bt3 { border-top: 3px solid getColor(base, lines); }
-.br3 { border-top: 3px solid getColor(base, lines); }
-.bb3 { border-top: 3px solid getColor(base, lines); }
-.bl3 { border-top: 3px solid getColor(base, lines); }
+._bt3 { border-top: 3px solid getColor(base, lines); }
+._br3 { border-top: 3px solid getColor(base, lines); }
+._bb3 { border-top: 3px solid getColor(base, lines); }
+._bl3 { border-top: 3px solid getColor(base, lines); }
 
-.bt4 { border-top: 4px solid getColor(base, lines); }
-.br4 { border-top: 4px solid getColor(base, lines); }
-.bb4 { border-top: 4px solid getColor(base, lines); }
-.bl4 { border-top: 4px solid getColor(base, lines); }
+._bt4 { border-top: 4px solid getColor(base, lines); }
+._br4 { border-top: 4px solid getColor(base, lines); }
+._bb4 { border-top: 4px solid getColor(base, lines); }
+._bl4 { border-top: 4px solid getColor(base, lines); }
