--- a/utils/_margins.scss
+++ b/utils/_margins.scss
@@ -3,45 +3,45 @@
 // =============================================================================
 
 // Resets
-.m0 { margin: 0; }
-.mt0 { margin-top: 0; }
-.mr0 { margin-right: 0; }
-.mb0 { margin-bottom: 0; }
-.ml0 { margin-left: 0; }
+._m0 { margin: 0; }
+._mt0 { margin-top: 0; }
+._mr0 { margin-right: 0; }
+._mb0 { margin-bottom: 0; }
+._ml0 { margin-left: 0; }
 
 // All the sides
-.mxs { margin: $spacing-xs; }
-.ms { margin: $spacing-s; }
-.mm { margin: $spacing-m; }
-.ml { margin: $spacing-l; }
-.mxl { margin: $spacing-xl; }
+._mxs { margin: $spacing-xs; }
+._ms { margin: $spacing-s; }
+._mm { margin: $spacing-m; }
+._ml { margin: $spacing-l; }
+._mxl { margin: $spacing-xl; }
 
 // Extra small
-.mtxs { margin-top: $spacing-xs; }
-.mrxs { margin-right: $spacing-xs; }
-.mbxs { margin-bottom: $spacing-xs; }
-.mlxs { margin-left: $spacing-xs; }
+._mtxs { margin-top: $spacing-xs; }
+._mrxs { margin-right: $spacing-xs; }
+._mbxs { margin-bottom: $spacing-xs; }
+._mlxs { margin-left: $spacing-xs; }
 
 // Small
-.mts { margin-top: $spacing-s; }
-.mrs { margin-right: $spacing-s; }
-.mbs { margin-bottom: $spacing-s; }
-.mls { margin-left: $spacing-s; }
+._mts { margin-top: $spacing-s; }
+._mrs { margin-right: $spacing-s; }
+._mbs { margin-bottom: $spacing-s; }
+._mls { margin-left: $spacing-s; }
 
 // Medium
-.mtm { margin-top: $spacing-m; }
-.mrm { margin-right: $spacing-m; }
-.mbm { margin-bottom: $spacing-m; }
-.mlm { margin-left: $spacing-m; }
+._mtm { margin-top: $spacing-m; }
+._mrm { margin-right: $spacing-m; }
+._mbm { margin-bottom: $spacing-m; }
+._mlm { margin-left: $spacing-m; }
 
 // Large
-.mtl { margin-top: $spacing-l; }
-.mrl { margin-right: $spacing-l; }
-.mbl { margin-bottom: $spacing-l; }
-.mll { margin-left: $spacing-l; }
+._mtl { margin-top: $spacing-l; }
+._mrl { margin-right: $spacing-l; }
+._mbl { margin-bottom: $spacing-l; }
+._mll { margin-left: $spacing-l; }
 
 // Extra Large
-.mtxl { margin-top: $spacing-xl; }
-.mrxl { margin-right: $spacing-xl; }
-.mbxl { margin-bottom: $spacing-xl; }
-.mlxl { margin-left: $spacing-xl; }
+._mtxl { margin-top: $spacing-xl; }
+._mrxl { margin-right: $spacing-xl; }
+._mbxl { margin-bottom: $spacing-xl; }
+._mlxl { margin-left: $spacing-xl; }
