--- a/utils/_paddings.scss
+++ b/utils/_paddings.scss
@@ -3,45 +3,45 @@
 // =============================================================================
 
 // Resets
-.p0 { padding: 0; }
-.pt0 { padding-top: 0; }
-.pr0 { padding-right: 0; }
-.pb0 { padding-bottom: 0; }
-.pl0 { padding-left: 0; }
+._p0 { padding: 0; }
+._pt0 { padding-top: 0; }
+._pr0 { padding-right: 0; }
+._pb0 { padding-bottom: 0; }
+._pl0 { padding-left: 0; }
 
 // All the sides
-.pxs { padding: $spacing-xs; }
-.ps { padding: $spacing-s; }
-.pm { padding: $spacing-m; }
-.pl { padding: $spacing-l; }
-.pxl { padding: $spacing-xl; }
+._pxs { padding: $spacing-xs; }
+._ps { padding: $spacing-s; }
+._pm { padding: $spacing-m; }
+._pl { padding: $spacing-l; }
+._pxl { padding: $spacing-xl; }
 
 // Extra small
-.ptxs { padding-top: $spacing-xs; }
-.prxs { padding-right: $spacing-xs; }
-.pbxs { padding-bottom: $spacing-xs; }
-.plxs { padding-left: $spacing-xs; }
+._ptxs { padding-top: $spacing-xs; }
+._prxs { padding-right: $spacing-xs; }
+._pbxs { padding-bottom: $spacing-xs; }
+._plxs { padding-left: $spacing-xs; }
 
 // Small
-.pts { padding-top: $spacing-s; }
-.prs { padding-right: $spacing-s; }
-.pbs { padding-bottom: $spacing-s; }
-.pls { padding-left: $spacing-s; }
+._pts { padding-top: $spacing-s; }
+._prs { padding-right: $spacing-s; }
+._pbs { padding-bottom: $spacing-s; }
+._pls { padding-left: $spacing-s; }
 
 // Medium
-.ptm { padding-top: $spacing-m; }
-.prm { padding-right: $spacing-m; }
-.pbm { padding-bottom: $spacing-m; }
-.plm { padding-left: $spacing-m; }
+._ptm { padding-top: $spacing-m; }
+._prm { padding-right: $spacing-m; }
+._pbm { padding-bottom: $spacing-m; }
+._plm { padding-left: $spacing-m; }
 
 // Large
-.ptl { padding-top: $spacing-l; }
-.prl { padding-right: $spacing-l; }
-.pbl { padding-bottom: $spacing-l; }
-.pll { padding-left: $spacing-l; }
+._ptl { padding-top: $spacing-l; }
+._prl { padding-right: $spacing-l; }
+._pbl { padding-bottom: $spacing-l; }
+._pll { padding-left: $spacing-l; }
 
 // Extra Large
-.ptxl { padding-top: $spacing-xl; }
-.prxl { padding-right: $spacing-xl; }
-.pbxl { padding-bottom: $spacing-xl; }
-.plxl { padding-left: $spacing-xl; }
+._ptxl { padding-top: $spacing-xl; }
+._prxl { padding-right: $spacing-xl; }
+._pbxl { padding-bottom: $spacing-xl; }
+._plxl { padding-left: $spacing-xl; }
