--- a/utils/_colors.scss
+++ b/utils/_colors.scss
@@ -4,11 +4,11 @@
 
 @each $color-name, $color in $colors {
   @each $color-type, $color-value in $color {
-    .c-#{$color-name}-#{$color-type} {
+    ._c-#{$color-name}-#{$color-type} {
       color: $color-value;
     }
 
-    .bg-#{$color-name}-#{$color-type} {
+    ._bg-#{$color-name}-#{$color-type} {
       background-color: $color-value;
     }
   }
