--- a/utils/_typography.scss
+++ b/utils/_typography.scss
@@ -9,11 +9,9 @@
 ._italic { font-style: italic; }
 ._no-decoration {text-decoration: none; }
 ._regular { font-weight: normal; }
-._small-caps { 
-  font-feature-settings: "smcp" 1, "c2sc" 1;
-  letter-spacing: 0.05em;
-}
+._small-caps { font-feature-settings: "smcp" 1, "c2sc" 1; }
 ._text-center { text-align: center; }
 ._text-left { text-align: left; }
 ._text-right { text-align: right; }
 ._underline { text-decoration: underline; }
+._letter-spacing { letter-spacing: $letter-spacing; }
