[fix: #22] Add font-family classes

--- a/utils/_typography.scss
+++ b/utils/_typography.scss
@@ -15,3 +15,10 @@
 ._text-right { text-align: right; }
 ._underline { text-decoration: underline; }
 ._letter-spacing { letter-spacing: $letter-spacing; }
+
+// Font-families
+._font-primary { font-family: $font-primary; }
+._font-secondary { font-family: $font-secondary; }
+._font-mono { font-family: $font-mono; }
+._font-print { font-family: $font-print-primary; }
+._font-print-secondary { font-family: $font-print-secondary; }
