[fix: #26] Adjust some class names
Display and position properties

--- a/utils/_display.scss
+++ b/utils/_display.scss
@@ -2,7 +2,7 @@
 // Display classes
 // =============================================================================
 
-._dis-inline-block { display: inline-block; }
-._dis-block { display: block; }
-._dis-inline { display: inline; }
-._dis-flex { display: flex; }
+._inline-block { display: inline-block; }
+._block { display: block; }
+._inline { display: inline; }
+._flex { display: flex; }
