--- a/utils/_position.scss
+++ b/utils/_position.scss
@@ -2,7 +2,7 @@
 // Position classes
 // =============================================================================
 
-._pos-abs { position: absolute; }
-._pos-rel { position: relative; }
-._pos-static { position: static; }
-._pos-fix { position: fixed; }
+._abs { position: absolute; }
+._rel { position: relative; }
+._sta { position: static; }
+._fix { position: fixed; }
