[fix: #23] Change "conditional-styling" to "hide-show"

--- a/concise-utils.scss
+++ b/concise-utils.scss
@@ -9,7 +9,7 @@
 @import 'utils/paddings';
 @import 'utils/borders';
 @import 'utils/colors';
-@import 'utils/conditional-styling';
+@import 'utils/hide-show';
 @import 'utils/type-scale';
 @import 'utils/typography';
 @import 'utils/position';
