--- a/utils/_hide-show.scss
+++ b/utils/_hide-show.scss
@@ -1,5 +1,5 @@
 //
-// Conditional styling
+// Hide/Show classes
 // =============================================================================
 
 //
