--- a/utils/_hide-show.scss
+++ b/utils/_hide-show.scss
@@ -71,7 +71,7 @@
 
 @media (--medium) {
   ._show-m,
-  ._hide-sm
+  ._hide-s,
   ._hide-xm,
   ._hide-l,
   ._hide-xl {
@@ -79,7 +79,7 @@
   }
 
   ._hide-m,
-  ._show-sm
+  ._show-s,
   ._show-xm,
   ._show-l,
   ._show-xl {
