--- a/utils/_margins-responsive.scss
+++ b/utils/_margins-responsive.scss
@@ -11,19 +11,19 @@ $spacings: (
     5: $spacing-xl
 );
 
-$queries: (s: --small, m: --medium, l: --large, xl: --extra-large); 
+$queries: (-s: --small, -m: --medium, -l: --large, -xl: --extra-large); 
 
 // Above defenitely should be moved to settings
 
 @mixin responsive-margins ($media){
     @each $spacing, $spacing-value in $spacings {
-        ._m#{$spacing}-#{$media} { margin: $spacing-value; }
-        ._mt#{$spacing}-#{$media} { margin-top: $spacing-value; }
-        ._mr#{$spacing}-#{$media} { margin-right: $spacing-value; }
-        ._mb#{$spacing}-#{$media} { margin-bottom: $spacing-value; }
-        ._ml#{$spacing}-#{$media} { margin-left: $spacing-value; }
-        ._mv#{$spacing}-#{$media} { margin-top: $spacing-value; margin-bottom: $spacing-value; }
-        ._mh#{$spacing}-#{$media} { margin-left:$spacing-value; margin-right: $spacing-value; }
+        ._m#{$spacing}#{$media} { margin: $spacing-value; }
+        ._mt#{$spacing}#{$media} { margin-top: $spacing-value; }
+        ._mr#{$spacing}#{$media} { margin-right: $spacing-value; }
+        ._mb#{$spacing}#{$media} { margin-bottom: $spacing-value; }
+        ._ml#{$spacing}#{$media} { margin-left: $spacing-value; }
+        ._mv#{$spacing}#{$media} { margin-top: $spacing-value; margin-bottom: $spacing-value; }
+        ._mh#{$spacing}#{$media} { margin-left:$spacing-value; margin-right: $spacing-value; }
     }    
 }
 
